# quantum-network

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  pyproject.toml
.zed/: settings.json
python/: README.md  example_linear_spec.py  export_demo.py  linear.py  linear_spec.py  plot.py  simple_solver_example.py  solver_example.py  test_linear_spec.py
python/simulation/: simulation.py
src/: graph.rs  lib.rs  main.rs  python_interface.rs  simlogs.parquet  simulation.rs
