[project]
name = "preshared-entanglement-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "cvxpy>=1.6.5",
    "networkx>=3.4.2",
    "polars>=1.28.1",
    "seaborn>=0.13.2",
    "vegafusion>=2.0.2",
    "vegafusion-python-embed>=1.6.9",
    "vl-convert-python>=1.7.0",
]

[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "qnet"

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }
